--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Bachelor of Engineering in Software Engineering
+  uni: University of Electronic Science and Technology of China
+  year: September, 2017 &mdash; June, 2021
   # awards:
-  # summary:
+  summary: Finish several projects.
